# test1

./: hw2.py
erp-cml/: README.md
erp-cml/camera_data/: CMakeLists.txt  package.xml
erp-cml/camera_data/calibration/: calibration.py  taking_picture.py
erp-cml/camera_data/msg/: ReferencePoses.msg
erp-cml/camera_data/src/: avg_input.py  b_spline_func.py  config.py  funcs.py  kalman_filter_3rd.py  main_ROS_prs.py  turn_on_camera.py  utils.py
erp-cml/path/: CMakeLists.txt  package.xml
erp-cml/path/src/: path_planner.py
erp-cml/testdrive/: CMakeLists.txt  package.xml
erp-cml/testdrive/src/: drive_gurobi.py  final_testdrive.py  final_testdrive_ori.py  purepursuit.py  ref_stanley.py  ref_stanley2.py  stanley.py  testdrive.py  testdrive2.py
erp-cml/testdrive/src/stanley_before/: stanley copy 2.py  stanley copy crosslimit.py  stanley copy.py  stanley copy_0826.py  stanley_0824_2032.py  stanley_0824_2146.py  stanley_linear copy.py  te1.py
erp-cml/visualization/: CMakeLists.txt  package.xml
erp-cml/visualization/launch/: visualization.launch
erp-cml/visualization/rviz/: erp.rviz
erp-cml/visualization/src/: aa.py  aaa.py  asdf.py  broadcaster.py
