<?xml version="1.0"?>
<package format="2">
  <name>camera_data</name>
  <version>0.0.1</version>
  <description>A ROS package for camera data analysis using image depth information.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
